--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "transformIgnorePatterns": [
       "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*|react-router-native)"
     ],
-    "setupFilesAfterEnv": ["<rootDir>/setupTests.js"]
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.js"
+    ]
   },
   "dependencies": {
     "@apollo/client": "^3.2.5",
@@ -28,6 +30,7 @@
     "dotenv": "^8.2.0",
     "expo": "~38.0.8",
     "expo-constants": "^9.2.0",
+    "expo-linking": "^1.0.5",
     "expo-status-bar": "^1.0.2",
     "formik": "^2.2.1",
     "graphql": "^15.4.0",
